@@ -71,15 +71,15 @@ var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
                             'font-family :\'Droid Sans Mono\';'             +
                             'font-size   :15px;'                            +
                             /* codemirror v3 */
-                            //'height      : ' + cloudcmd.HEIGHT + 'px'       +
+                            //'height      : ' + cloudcmd.HEIGHT + 'px'     +
                         '}'                                                 +
                         '.CodeMirror-scroll{'                               +
-                            'height      : ' + (cloudcmd.HEIGHT) + 'px'     +
-                        '}',                                                 //+
-                        /* codemirror v3 */
-                        //'#CodeMirrorEditor{'                                +
-                        //    'padding        :20px 20px 20px 20px;'          +
-                        //    '}'
+                            'height      : ' + cloudcmd.HEIGHT + 'px'       +
+                        '}'                                                 +
+                        '#CodeMirrorEditor{'                                +
+                            'float: right'                                  +
+                        //    'padding        :20px 20px 20px 20px;'        +
+                        '}',
                 parent: document.head
             },
             lDir + 'codemirror.css',
